# lowlat-trading-lib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_pool.cpp  bench_spsc_queue.cpp
docs/: DESIGN.md  KERNEL_TUNING.md
examples/: CMakeLists.txt  example_pool.cpp  example_spsc.cpp
include/llt/common/: cache.hpp
include/llt/concurrency/: spsc_queue.hpp
include/llt/memory/: object_pool.hpp  thread_local_pool.hpp
include/llt/sys/: cpu_affinity.hpp  hugepages.hpp  rdtsc_clock.hpp
include/llt/util/: latency_histogram.hpp
tests/: CMakeLists.txt  test_cpu_affinity.cpp  test_object_pool.cpp  test_rdtsc_clock.cpp  test_spsc_queue.cpp  test_thread_local_pool.cpp
